// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalize options snapshot additional entires should added 1`] = `
{
  "main": [
    "<prefix>/dist/clients/WebSocketClient.js",
    "<prefix>/rspack-dev-client/dist/index.js?protocol=ws%3A&hostname=0.0.0.0&port=8080&pathname=%2Fws&logging=info&overlay=true&reconnect=10&hot=true&live-reload=true",
    "<prefix>/rspack-dev-client/dist/devServer.js",
    "<prefix>/rspack-dev-client/dist/reactRefresh.js",
    "<prefix>/something",
  ],
}
`;

exports[`normalize options snapshot no options 1`] = `
{
  "allowedHosts": "auto",
  "bonjour": false,
  "client": {
    "logging": "info",
    "overlay": true,
    "reconnect": 10,
    "webSocketURL": {},
  },
  "compress": true,
  "devMiddleware": {},
  "historyApiFallback": false,
  "host": undefined,
  "hot": true,
  "liveReload": true,
  "magicHtml": true,
  "open": [],
  "port": 8080,
  "server": {
    "options": {},
    "type": "http",
  },
  "setupExitSignals": true,
  "static": [
    {
      "directory": "<PROJECT_ROOT>/public",
      "publicPath": [
        "/",
      ],
      "serveIndex": {
        "icons": true,
      },
      "staticOptions": {},
      "watch": {
        "alwaysStat": true,
        "atomic": false,
        "followSymlinks": false,
        "ignoreInitial": true,
        "ignorePermissionErrors": true,
        "ignored": undefined,
        "interval": undefined,
        "persistent": true,
        "usePolling": false,
      },
    },
  ],
  "watchFiles": [],
  "webSocketServer": {
    "options": {
      "path": "/ws",
    },
    "type": "ws",
  },
}
`;

exports[`normalize options snapshot port string 1`] = `
{
  "allowedHosts": "auto",
  "bonjour": false,
  "client": {
    "logging": "info",
    "overlay": true,
    "reconnect": 10,
    "webSocketURL": {},
  },
  "compress": true,
  "devMiddleware": {},
  "historyApiFallback": false,
  "host": undefined,
  "hot": true,
  "liveReload": true,
  "magicHtml": true,
  "open": [],
  "port": 9000,
  "server": {
    "options": {},
    "type": "http",
  },
  "setupExitSignals": true,
  "static": [
    {
      "directory": "<PROJECT_ROOT>/public",
      "publicPath": [
        "/",
      ],
      "serveIndex": {
        "icons": true,
      },
      "staticOptions": {},
      "watch": {
        "alwaysStat": true,
        "atomic": false,
        "followSymlinks": false,
        "ignoreInitial": true,
        "ignorePermissionErrors": true,
        "ignored": undefined,
        "interval": undefined,
        "persistent": true,
        "usePolling": false,
      },
    },
  ],
  "watchFiles": [],
  "webSocketServer": {
    "options": {
      "path": "/ws",
    },
    "type": "ws",
  },
}
`;

exports[`normalize options snapshot react.development and react.refresh should be true in default when hot enabled 1`] = `
{
  "builtins": {
    "copy": undefined,
    "css": {
      "modules": {
        "exportsOnly": false,
        "localIdentName": "[hash]",
        "localsConvention": "asIs",
      },
    },
    "decorator": {
      "emitMetadata": true,
      "legacy": true,
    },
    "define": {},
    "devFriendlySplitChunks": false,
    "emotion": undefined,
    "html": [],
    "minify": {
      "dropConsole": false,
      "enable": true,
      "passes": 1,
      "pureFuncs": [],
    },
    "noEmitAssets": false,
    "polyfill": true,
    "postcss": {
      "pxtorem": undefined,
    },
    "presetEnv": [],
    "progress": undefined,
    "react": {
      "development": true,
      "refresh": true,
    },
    "treeShaking": true,
  },
  "devServer": {
    "allowedHosts": "auto",
    "bonjour": false,
    "client": {
      "logging": "info",
      "overlay": true,
      "reconnect": 10,
      "webSocketURL": {},
    },
    "compress": true,
    "devMiddleware": {},
    "historyApiFallback": false,
    "host": undefined,
    "hot": true,
    "liveReload": true,
    "magicHtml": true,
    "open": [],
    "port": 8080,
    "server": {
      "options": {},
      "type": "http",
    },
    "setupExitSignals": true,
    "static": [
      {
        "directory": "<PROJECT_ROOT>/public",
        "publicPath": [
          "/",
        ],
        "serveIndex": {
          "icons": true,
        },
        "staticOptions": {},
        "watch": {
          "alwaysStat": true,
          "atomic": false,
          "followSymlinks": false,
          "ignoreInitial": true,
          "ignorePermissionErrors": true,
          "ignored": undefined,
          "interval": undefined,
          "persistent": true,
          "usePolling": false,
        },
      },
    ],
    "watchFiles": [],
    "webSocketServer": {
      "options": {
        "path": "/ws",
      },
      "type": "ws",
    },
  },
}
`;

exports[`normalize options snapshot react-refresh client added when react/refresh enabled 1`] = `
{
  "main": [
    "<prefix>/dist/clients/WebSocketClient.js",
    "<prefix>/rspack-dev-client/dist/index.js?protocol=ws%3A&hostname=0.0.0.0&port=8080&pathname=%2Fws&logging=info&overlay=true&reconnect=10&hot=true&live-reload=true",
    "<prefix>/rspack-dev-client/dist/devServer.js",
    "<prefix>/rspack-dev-client/dist/reactRefresh.js",
    "<prefix>/something",
  ],
}
`;
